:ambulance: arreglo de preguntas

--- a/contenido/pag26.html
+++ b/contenido/pag26.html
@@ -172,7 +172,7 @@
                         <div class="inciso">
                             <h4>A)</h4>
                         </div>
-                        <div id="respuestaA1_1" class="respuesta">
+                        <div id="respuestaA1_1" class="respuestaCaso">
                             <p>La Compañía no acepta pagos en efectivo en caja, sin embargo, el cliente tiene la posibilidad de hacer el pago en efectivo en alguna institución bancaria a través referencia bancaria a la cuenta de la Compañía. 
                             </p>
                         </div>
@@ -181,7 +181,7 @@
                         <div class="inciso">
                             <h4>B)</h4>
                         </div>
-                        <div id="respuestaB1_1" class="respuesta">
+                        <div id="respuestaB1_1" class="respuestaCaso">
                             <p>Sin importar los motivos, se considera una operación relevante, es necesario que alerte de esta situación al Oficial de Cumplimiento para que realicen una investigación del caso.
                             </p>
                         </div>
@@ -216,7 +216,7 @@
                         <div class="inciso">
                             <h4>A)</h4>
                         </div>
-                        <div id="respuestaA2_1" class="respuesta">
+                        <div id="respuestaA2_1" class="respuestaCaso">
                             <p>No es posible aceptar ninguna documentación que no esté actualizada y que contenga toda la información legible.
                             </p>
                         </div>
@@ -225,7 +225,7 @@
                         <div class="inciso">
                             <h4>B)</h4>
                         </div>
-                        <div id="respuestaB2_1" class="respuesta">
+                        <div id="respuestaB2_1" class="respuestaCaso">
                             <p>No pasa nada si dejo pasar una identificación ilegible y no vigente.
                             </p>
                         </div>
@@ -258,7 +258,7 @@
                         <div class="inciso">
                             <h4>A)</h4>
                         </div>
-                        <div id="respuestaA3_1" class="respuesta">
+                        <div id="respuestaA3_1" class="respuestaCaso">
                             <p>Si no lo identificamos ahora no hay ningún impacto, el Agente ya comentó que es su conocido de hace muchos años y que es un hombre muy honorable.
                             </p>
                         </div>
@@ -267,7 +267,7 @@
                         <div class="inciso">
                             <h4>B)</h4>
                         </div>
-                        <div id="respuestaB3_1" class="respuesta">
+                        <div id="respuestaB3_1" class="respuestaCaso">
                             <p>No, la identificación se debe de realizar de acuerdo con Políticas y al cúmulo de la prima. 
                             </p>
                         </div>
@@ -432,7 +432,7 @@
                         <div class="inciso">
                             <h4>A)</h4>
                         </div>
-                        <div id="respuestaA1_2" class="respuesta">
+                        <div id="respuestaA1_2" class="respuestaCaso">
                             <p>Es cuando una entidad envía recurso internacionales.
                             </p>
                         </div>
@@ -441,7 +441,7 @@
                         <div class="inciso">
                             <h4>B)</h4>
                         </div>
-                        <div id="respuestaB1_2" class="respuesta">
+                        <div id="respuestaB1_2" class="respuestaCaso">
                             <p>Operación, actividad, conducta o comportamiento de cualquiera de los Colaboradores y Agentes General de Seguros, que por sus características,  pudiera contravenir, vulnerar o evadir la aplicación de lo dispuesto por la LISF.
                             </p>
                         </div>
@@ -475,7 +475,7 @@
                         <div class="inciso">
                             <h4>A)</h4>
                         </div>
-                        <div id="respuestaA2_2" class="respuesta">
+                        <div id="respuestaA2_2" class="respuestaCaso">
                             <p>No, se puede reportar al Buzón y Oficial de Cumplimiento para iniciar un seguimiento con su caso.
                             </p>
                         </div>
@@ -484,7 +484,7 @@
                         <div class="inciso">
                             <h4>B)</h4>
                         </div>
-                        <div id="respuestaB2_2" class="respuesta">
+                        <div id="respuestaB2_2" class="respuestaCaso">
                             <p>No soy de su área, así que no soy nadie para meterme en la vida de los demás. 
                             </p>
                         </div>
@@ -517,7 +517,7 @@
                         <div class="inciso">
                             <h4>A)</h4>
                         </div>
-                        <div id="respuestaA3_2" class="respuesta">
+                        <div id="respuestaA3_2" class="respuestaCaso">
                             <p>No es un colaborador que tenga contacto con los clientes, así que nada debería preocuparnos.
                             </p>
                         </div>
@@ -526,7 +526,7 @@
                         <div class="inciso">
                             <h4>B)</h4>
                         </div>
-                        <div id="respuestaB3_2" class="respuesta">
+                        <div id="respuestaB3_2" class="respuestaCaso">
                             <p>Sí, todos pueden llegar a incurrir en un delito. 
                             </p>
                         </div>
@@ -586,7 +586,6 @@
             </div>
         </div>
     </div>
-
 
     <div class="cont-casos" id="caso-reaseguradora">
         <div class="intro-reaseguradora">
@@ -714,7 +713,7 @@
                         <div class="inciso">
                             <h4>A)</h4>
                         </div>
-                        <div id="respuestaA1_3" class="respuesta">
+                        <div id="respuestaA1_3" class="respuestaCaso">
                             <p>Los negocios son muy atractivos por lo que es difícil rechazarlos.
                             </p>
                         </div>
@@ -723,7 +722,7 @@
                         <div class="inciso">
                             <h4>B)</h4>
                         </div>
-                        <div id="respuestaB1_3" class="respuesta">
+                        <div id="respuestaB1_3" class="respuestaCaso">
                             <p>No, debido al carácter sospechoso de la relación.
                             </p>
                         </div>
@@ -758,7 +757,7 @@
                         <div class="inciso">
                             <h4>A)</h4>
                         </div>
-                        <div id="respuestaA2_3" class="respuesta">
+                        <div id="respuestaA2_3" class="respuestaCaso">
                             <p>Sí, no es posible iniciar una relación comercial sin todos los datos y documentos cotejados como originales, legibles y vigentes.
                             </p>
                         </div>
@@ -767,7 +766,7 @@
                         <div class="inciso">
                             <h4>B)</h4>
                         </div>
-                        <div id="respuestaB2_3" class="respuesta">
+                        <div id="respuestaB2_3" class="respuestaCaso">
                             <p>Se podría hacer una excepción para que entregaran después los datos y documentos faltantes.
                             </p>
                         </div>
@@ -801,7 +800,7 @@
                         <div class="inciso">
                             <h4>A)</h4>
                         </div>
-                        <div id="respuestaA3_3" class="respuesta">
+                        <div id="respuestaA3_3" class="respuestaCaso">
                             <p>No es necesario considerar ese tipo de datos ya que pueden existir nombres homónimos.
                             </p>
                         </div>
@@ -810,7 +809,7 @@
                         <div class="inciso">
                             <h4>B)</h4>
                         </div>
-                        <div id="respuestaB3_3" class="respuesta">
+                        <div id="respuestaB3_3" class="respuestaCaso">
                             <p>No es normal, debe darse aviso al Oficial de Cumplimiento para iniciar una investigación. 
                             </p>
                         </div>
